@@ -214,6 +214,7 @@ AC_OUTPUT(Makefile \
 	doc/opreport.1 \
 	doc/opannotate.1 \
 	doc/opgprof.1 \
+	doc/opstack.1 \
 	doc/srcdoc/Doxyfile \
 	libpp/Makefile \
 	pp/Makefile \
